Add checkout step

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,6 +29,8 @@ jobs:
     needs: [test]
 
     steps:
+      - uses: actions/checkout@v2
+      
       - name: Initialize Google Cloud SDK
         uses: zxyle/publish-gae-action@master
         with:
