--- a/.gcloudignore
+++ b/.gcloudignore
@@ -7,11 +7,10 @@
 #   $ gcloud topic gcloudignore
 #
 .gcloudignore
-# If you would like to upload your .git directory, .gitignore file or files
-# from your .gitignore file, remove the corresponding line
-# below:
 .git
 .gitignore
 
-# Node.js dependencies:
-node_modules/
+#!include:.gitignore
+
+.github/
+client-secret.json
